<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.github.mzule.fantasyslide.FantasyDrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/note_list"
            android:divider="#00000000"
            android:dividerHeight="9dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/fake" />-->

        <com.github.mzule.fantasyslide.SideBar
            android:id="@+id/leftSideBar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            app:maxTranslationX="66dp">
            <LinearLayout
                android:id="@+id/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:onClick="onClick"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/me"
                    app:civ_border_color="@color/menu_text_color"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mzule"
                    android:textColor="@color/menu_text_color"
                    android:textSize="18sp" />
            </LinearLayout>
            <TextView
                style="@style/MenuText"
                android:drawableLeft="@drawable/circle"
                android:text="@string/menu_item1" />

            <TextView
                style="@style/MenuText"
                android:drawableLeft="@drawable/wallet"
                android:text="@string/menu_item2" />

            <TextView
                style="@style/MenuText"
                android:drawableLeft="@drawable/coupon"
                android:text="@string/menu_item3" />

            <TextView
                style="@style/MenuText"
                android:drawableLeft="@drawable/friends"
                android:text="@string/menu_item4" />

            <TextView
                style="@style/MenuText"
                android:drawableLeft="@drawable/settings"
                android:text="@string/menu_item5" />
        </com.github.mzule.fantasyslide.SideBar>

        <!--<com.github.mzule.fantasyslide.SideBar-->
            <!--android:id="@+id/rightSideBar"-->
            <!--android:layout_width="133dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="end"-->
            <!--android:background="@drawable/bg_right_bar"-->
            <!--android:gravity="center_vertical|right"-->
            <!--app:maxTranslationX="-33dp">-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期一" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期二" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期三" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期四" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期五" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期六" />-->

            <!--<TextView-->
                <!--style="@style/MenuText"-->
                <!--android:text="星期日" />-->
        <!--</com.github.mzule.fantasyslide.SideBar>-->
    </com.github.mzule.fantasyslide.FantasyDrawerLayout>
    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/plus"
        android:alpha="70"
        android:background="#00ffffff"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:id="@+id/tipView"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="invisible" />
</RelativeLayout>